[tool.poetry]
name = "llama-chatter"
version = "0.1.0"
description = ""
authors = ["Sean Wesenberg <wookets@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
main = "llama-chatter:main"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
